--- a/paper-prototype/index.html
+++ b/paper-prototype/index.html
@@ -7,5 +7,62 @@
 </head>
 <body>
 	<!-- your html here -->
+	<header>
+		<h1>
+			<a href="/"><strong>6.S063</strong>
+				<span>Design for the Web: Languages and User&nbsp;Interfaces</span></a>
+		</h1>
+	</header>
+
+
+	<main>
+
+
+		<h2><em>Idea Generation for Chat/IM Apps:</em></h2>
+		<aside id="toc">
+			<!-- <ul> -->
+			<a href="#directions">Directions </a>
+			<br>
+			<a href="#Inspiration">Inspiration </a>
+			<br>
+			<a href="#Idea1">Idea 1 </a>
+			<br>
+			<a href="#Idea2"> Idea 2 </a>
+
+
+			<!-- </ul> -->
+
+
+
+		</aside>
+		<h3 id="directions">Directions: </h3>
+
+
+		</section>
+
+		<p></p>
+		<p></p>
+
+
+
+
+		<section id="Inspiration">
+			<h3 id="Inspiration" tabindex="-1"><a class="header-anchor" href="#Inspiration">Inspiration: </a></h3>
+
+		</section>
+
+		<section id="Idea1">
+			<h3 id="Idea1" tabindex="-1"><a class="header-anchor" href="#Idea1">Idea 1: Make Centralized Messaging
+					App</a></h3>
+
+		</section>
+
+		<section id="Idea2">
+			<h3 id="Idea2" tabindex="-1"><a class="header-anchor" href="#Idea2">Idea 2: Notification Customizability</a>
+			</h3>
+
+		</section>
+
+	</main>
 </body>
 </html>
