--- a/paper-prototype/index.html
+++ b/paper-prototype/index.html
@@ -20,22 +20,22 @@
 
 		<h2><em>Idea Generation for Chat/IM Apps:</em></h2>
 		<aside id="toc">
-			<!-- <ul> -->
-			<a href="#directions">Directions </a>
-			<br>
-			<a href="#Inspiration">Inspiration </a>
-			<br>
-			<a href="#Idea1">Idea 1 </a>
-			<br>
-			<a href="#Idea2"> Idea 2 </a>
-
-
-			<!-- </ul> -->
+		
 
 
 
 		</aside>
 		<h3 id="directions">Directions: </h3>
+		<div class="deliverable">
+			<p><strong>Deliverable:</strong> 2 prototypes, each with:</p>
+			<ul>
+			<li>Photos of key prototype "screens" showing your novel features and a simple HTML page that explains them and justifies the improvements (1-2 sentences max per improvement).</li>
+			<li>A video of you interacting with your "screens" (as in the Nielsen Norman group video) to carry out the tasks you expect users to perform with your interface.
+			The prototype should be clearly visible in the video, as well as your hands interacting with it.</li>
+			</ul>
+			<!-- - A short video of a user performing tasks with your paper prototype, description of your three tasks, and insights from the user testing.
+			- Link to your HTML & CSS mockup. Include a short description of your improvements. -->
+			</div>
 
 
 		</section>
@@ -43,22 +43,15 @@
 		<p></p>
 		<p></p>
 
-
-
-
-		<section id="Inspiration">
-			<h3 id="Inspiration" tabindex="-1"><a class="header-anchor" href="#Inspiration">Inspiration: </a></h3>
-
-		</section>
 
 		<section id="Idea1">
-			<h3 id="Idea1" tabindex="-1"><a class="header-anchor" href="#Idea1">Idea 1: Make Centralized Messaging
-					App</a></h3>
+			<h3 id="Idea1" tabindex="-1"><a class="header-anchor" href="#Idea1">Idea 1:
+					</a></h3>
 
 		</section>
 
 		<section id="Idea2">
-			<h3 id="Idea2" tabindex="-1"><a class="header-anchor" href="#Idea2">Idea 2: Notification Customizability</a>
+			<h3 id="Idea2" tabindex="-1"><a class="header-anchor" href="#Idea2">Idea 2: </a>
 			</h3>
 
 		</section>
