--- a/paper-prototype/index.html
+++ b/paper-prototype/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Paper Prototype Writeup</title>
 	<link rel="stylesheet" href="writeup.css">
 </head>
+
 <body>
 	<!-- your html here -->
 	<header>
@@ -20,7 +22,7 @@
 
 		<h2><em>Idea Generation for Chat/IM Apps:</em></h2>
 		<aside id="toc">
-		
+
 
 
 
@@ -29,33 +31,171 @@
 		<div class="deliverable">
 			<p><strong>Deliverable:</strong> 2 prototypes, each with:</p>
 			<ul>
-			<li>Photos of key prototype "screens" showing your novel features and a simple HTML page that explains them and justifies the improvements (1-2 sentences max per improvement).</li>
-			<li>A video of you interacting with your "screens" (as in the Nielsen Norman group video) to carry out the tasks you expect users to perform with your interface.
-			The prototype should be clearly visible in the video, as well as your hands interacting with it.</li>
+				<li>Photos of key prototype "screens" showing your novel features and a simple HTML page that explains
+					them and justifies the improvements (1-2 sentences max per improvement).</li>
+				<li>A video of you interacting with your "screens" (as in the Nielsen Norman group video) to carry out
+					the tasks you expect users to perform with your interface.
+					The prototype should be clearly visible in the video, as well as your hands interacting with it.
+				</li>
 			</ul>
 			<!-- - A short video of a user performing tasks with your paper prototype, description of your three tasks, and insights from the user testing.
 			- Link to your HTML & CSS mockup. Include a short description of your improvements. -->
-			</div>
+		</div>
 
 
 		</section>
 
 		<p></p>
 		<p></p>
-
+		<h3>General Pages :</h3>
+		<p>Note: (these are to be used for under construction and generally for both app prototypes)</p>
+		<img src="1.jpg" alt="Trulli" width="70%" height="10%">
+		<p></p>
+		<img src="all.jpg" alt="Trulli" width="70%" height="10%">
 
 		<section id="Idea1">
 			<h3 id="Idea1" tabindex="-1"><a class="header-anchor" href="#Idea1">Idea 1:
-					</a></h3>
+				</a></h3>
+			<h4>Idea one pictures:</h4>
+			<h5>Home Page:</h5>
+			<p>
+				<img src="idea1_2.jpg" alt="Trulli" width="70%" height="60%">
+
+			<ul>
+				<li>
+					This shows the home screen to the app along with most contacted.
+				</li>
+				<li>
+					The more you contact somebody, the
+					larger their circle.
+				</li>
+				<li>
+					Circles also have different colors depending on whether they're friends,
+					family, work, school, or whatever category users select.
+				</li>
+			</ul>
+			</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<h5>Contact Clicked:</h5>
+			<p>
+				<img src="idea1_3.jpg" alt="Trulli" width="70%" height="60%">
+			<ul>
+				<li>
+					This shows the contact screen if a contact is clicked on non-stop.
+				</li>
+				<li>
+					Users can select a contact and see their
+					profile, which includes their name, picture, and status.
+				</li>
+				<li>
+					From there, users can select an action including:
+					<ul>
+						<li>
+							calling
+						</li>
+						<li>
+							video chatting
+						</li>
+						<li>
+							texting
+						</li>
+						<li>
+							editing contact, and other functions
+						</li>
+					</ul>
+				</li>
+			</ul>
+			</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<h5>Texting:</h5>
+			<p>
+				<img src="idea1_1.jpg" alt="Trulli" width="70%" height="60%">
+
+			<ul>
+				<li>
+					This shows a specific text message being sent to someone.
+				</li>
+			</ul>
+			</p>
 
 		</section>
 
 		<section id="Idea2">
 			<h3 id="Idea2" tabindex="-1"><a class="header-anchor" href="#Idea2">Idea 2: </a>
 			</h3>
+			<h4>Idea two pictures:</h4>
+			<h5>Home Page</h5>
+			<p>
+				<img src="idea2_5.jpg" alt="Home Page" width="70%" height="60%">
+			<ul>
+				<li>
+					This shows the home screen to the app, which opens up to the text messages automatically.
+				</li>
+			</ul>
+			</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<h5>Updates Page:</h5>
+			<p>
+				<img src="idea2_1.jpg" alt="Updates HS" width="70%" height="60%">
+			<ul>
+				<li>
+					This shows the "Updates" page, which is where users can post things to their feed. 
+				</li>
+				<li>
+					Users can select who's able to view their posts if they post anything.
+				</li>
+				<li>
+					Users get to choose whose posts they view(friends, family, work, everyone, etc.)
+				</li>
+			</ul>
+			</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p>
+				<img src="idea2_3.jpg" alt="Share" width="70%" height="60%">
+			<ul>
+				<li>
+					This shows a post being shared.
+				</li>
+			</ul>
+			</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p>
+				<img src="idea2_2.jpg" alt="like button" width="70%" height="60%">
+			<ul>
+				<li>
+					This shows a post being liked(like button)
+				</li>
+				<li>
+					Also shows a search button if search is clicked.
+				</li>
+			</ul>
+			</p>
+			<p></p>
+			<p></p>
+			<p></p>
+			<p>
+				<img src="idea2_4.jpg" alt="Comment" width="70%" height="60%">
+			<ul>
+				<li>
+					This shows a post being commented on.
+				</li>
+			</ul>
+			</p>
+
 
 		</section>
 
 	</main>
 </body>
+
 </html>
