added dropbox link

--- a/paper-prototype/index.html
+++ b/paper-prototype/index.html
@@ -145,7 +145,7 @@
 				<img src="idea2_1.jpg" alt="Updates HS" width="70%" height="60%">
 			<ul>
 				<li>
-					This shows the "Updates" page, which is where users can post things to their feed. 
+					This shows the "Updates" page, which is where users can post things to their feed.
 				</li>
 				<li>
 					Users can select who's able to view their posts if they post anything.
@@ -194,6 +194,17 @@
 
 
 		</section>
+		<section id="testing">
+			<h3 id="Idea19" tabindex="-1"><a class="header-anchor" href="#Idea2">Testing:</a>
+		</section>
+		<h4>Idea 1 Testing:</h4>
+
+		<a href="https://www.dropbox.com/s/q0w1bilcdlz7e1o/IMG_7823.MOV?dl=0">Idea 1 Testing(CLICK HERE)</a>
+
+		<h4>Idea 2 Testing:</h4>
+
+		<a href="https://www.dropbox.com/s/v0cw56ozwlxi2i4/IMG_7821.MOV?dl=0">Idea 2 Testing(CLICK HERE)</a>
+
 
 	</main>
 </body>
